--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jwt-decode": "^2.2.0",
-    "mdbreact": "^4.6.0",
+    "mdbreact": "^4.10.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -38,7 +38,7 @@
     "raf": "3.4.0",
     "react": "^16.4.1",
     "react-country-region-selector": "^1.3.0",
-    "react-dev-utils": "^5.0.1",
+    "react-dev-utils": "^7.0.2",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
@@ -50,7 +50,7 @@
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "2.9.4",
+    "webpack-dev-server": "^3.1.14",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
